--- a/stacks/web/site/PersonalSite/index.html
+++ b/stacks/web/site/PersonalSite/index.html
@@ -88,7 +88,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Welcome to Braiden's Portfolio Site</h2>
-                <p>As a full stack Java Programmer, Braiden is skilled in making web-apps that involve: Java, Javascript, Angular, MySQL databases, and HTML/CSS. A number of techniques involving different API’s, frameworks, and libraries are used to create programs and web-apps. Scroll down or use the navigation bar to explore different projects and information about Braiden. </p>
+                <p>TESTING: As a full stack Java Programmer, Braiden is skilled in making web-apps that involve: Java, Javascript, Angular, MySQL databases, and HTML/CSS. A number of techniques involving different API’s, frameworks, and libraries are used to create programs and web-apps. Scroll down or use the navigation bar to explore different projects and information about Braiden. </p>
 <!--                <a href="#featured-services" class="btn-get-started scrollto">Check It Out</a>-->
               </div>
             </div>
